Terrain: bridges, low and high